# VectOptAL

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  environment.yml  evaluate.py  main.py  pyproject.toml  requirements.txt  setup.cfg  simulations.py  tutorial.ipynb
.github/workflows/: bandit.yml  deploy.yml  test.yml
algorithms/: adapt_el_algorithm.py  adapt_el_algorithm_gp.py  adapt_el_wrap.py  naive_alg.py
algorithms/ADELGP/: adelgp.py
algorithms/JESMO/: jesmo.py
algorithms/MESMO/: mesmo.py  mesmo_dataset_wrapper.py  singlemes.py
data/botorch/: CarSideImpact.npy  DiscBrake.npy  Penicillin.npy  (+4 more)
docs/: requirements.txt
examples/: basic_order.ipynb  check_dominates_performance.ipynb  vector_optimization.ipynb  vector_optimization_continuous_domain.ipynb
experiments/: experiment.yaml  experiment_adelgp.yaml  experiment_batch.yaml  experiment_cont.yaml  experiment_hyperrectangle.yaml  experiment_jesmo.yaml  experiment_mesmo.yaml  experiment_pk1.yaml
models/: auer.py  bnn.py  gpy.py  gpyt.py  indep_bot.py  indep_gpyt.py  indep_subg.py  independent_gv.py  mesmo.py
test/: test_VOGP.py  test_confidence_region.py  test_design_space.py  test_maximization_problem.py  test_order.py  test_ordering_cone.py  test_vogp_ad.py
utils/: config.py  dataset.py  kernels.py  order_utils.py  order_utils_auer.py  order_utils_gp.py  seed.py  utils.py
vectoptal/: confidence_region.py  design_space.py  maximization_problem.py  order.py  ordering_cone.py
vopy/: confidence_region.py  design_space.py  maximization_problem.py  order.py  ordering_cone.py
(+121 files in other folders)
